--- a/Learning-Track/LearningTrack/LearningTrack/MainStoryboard.storyboard
+++ b/Learning-Track/LearningTrack/LearningTrack/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -24,20 +24,8 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" id="NBp-cW-Gd9">
-                                <rect key="frame" x="645" y="254" width="218" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" id="6Gk-ml-vhm">
-                                <rect key="frame" x="645" y="199" width="218" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done"/>
-                            </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1CI-UC-3sf">
-                                <rect key="frame" x="486" y="42" width="537" height="204"/>
+                                <rect key="frame" x="486" y="147" width="537" height="204"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Welcome to Learning Track!">
@@ -59,7 +47,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Please login to continue." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HPl-S3-jbE">
-                                <rect key="frame" x="661" y="350" width="186" height="21"/>
+                                <rect key="frame" x="661" y="364" width="186" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.30702177655412499" green="0.46112946670787008" blue="0.52384086277173914" alpha="1" colorSpace="calibratedRGB"/>
@@ -78,8 +66,6 @@
                     <connections>
                         <outlet property="LoginButton" destination="W2u-wc-eUJ" id="2bg-vo-HPR"/>
                         <outlet property="LoginLoadingIndicator" destination="SUM-XL-GBy" id="Tgb-dh-oDx"/>
-                        <outlet property="PasswordField" destination="NBp-cW-Gd9" id="CoQ-hF-QcT"/>
-                        <outlet property="UsernameField" destination="6Gk-ml-vhm" id="aRa-jc-2Tr"/>
                         <segue destination="ttf-8U-8Fu" kind="modal" identifier="ToPickClass" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="dQY-ia-ofv"/>
                     </connections>
                 </viewController>
@@ -451,13 +437,80 @@
         <image name="pencil.png" width="26" height="26"/>
         <image name="repeat@2x.png" width="52" height="52"/>
     </resources>
+    <classes>
+        <class className="InstructorOptionsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructorOptionsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="changeClassButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="logoutButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="InstructorSeatingChartViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructorSeatingChartViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="SeatWebView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="InstructorStatisticsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructorStatisticsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="plotTable" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="InstructorTabBarController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructorTabBarController.h"/>
+        </class>
+        <class className="LearningTrackViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LearningTrackViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="LoginButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="LoginLoadingIndicator" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="PasswordField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="UsernameField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="PickClassViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PickClassViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="ContinueButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="classTable" candidateClass="UITableView"/>
+            </relationships>
+        </class>
+        <class className="SeatingChartWebView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SeatingChartWebView.h"/>
+        </class>
+        <class className="StudentOptionsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StudentOptionsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="changeClassButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="logoutButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="StudentSeatingChartViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StudentSeatingChartViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="SeatWebView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="StudentStatisticsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StudentStatisticsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="plotTable" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
+        <class className="StudentTabBarController" superclassName="UITabBarController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/StudentTabBarController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="EfG-3X-8ck"/>
+        <segue reference="dQY-ia-ofv"/>
         <segue reference="pD3-2S-hpJ"/>
     </inferredMetricsTieBreakers>
 </document>
