--- a/Learning-Track/LearningTrack/LearningTrack/MainStoryboard.storyboard
+++ b/Learning-Track/LearningTrack/LearningTrack/MainStoryboard.storyboard
@@ -13,10 +13,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="W2u-wc-eUJ">
-                                <rect key="frame" x="709" y="305" width="91" height="33"/>
+                                <rect key="frame" x="680" y="305" width="149" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Login">
+                                <state key="normal" title="BU WebLogin">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -39,15 +39,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" id="SUM-XL-GBy">
-                                <rect key="frame" x="811" y="311" width="20" height="20"/>
+                                <rect key="frame" x="837" y="311" width="20" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Default.png" id="g8a-S9-xFU">
                                 <rect key="frame" x="28" y="130" width="590" height="501"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Please authenticate with BU WebLogin to continue." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HPl-S3-jbE">
-                                <rect key="frame" x="561" y="363" width="387" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HPl-S3-jbE">
+                                <rect key="frame" x="561" y="363" width="0.0" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.30702177655412499" green="0.46112946670787008" blue="0.52384086277173914" alpha="1" colorSpace="calibratedRGB"/>
@@ -466,8 +466,6 @@
             <relationships>
                 <relationship kind="outlet" name="LoginButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="LoginLoadingIndicator" candidateClass="UIActivityIndicatorView"/>
-                <relationship kind="outlet" name="PasswordField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="UsernameField" candidateClass="UITextField"/>
             </relationships>
         </class>
         <class className="PickClassViewController" superclassName="UIViewController">
