--- a/Learning-Track/LearningTrack/LearningTrack/MainStoryboard.storyboard
+++ b/Learning-Track/LearningTrack/LearningTrack/MainStoryboard.storyboard
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="W2u-wc-eUJ">
-                                <rect key="frame" x="718" y="380" width="179" height="33"/>
+                                <rect key="frame" x="641" y="304" width="179" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Login">
@@ -25,7 +25,7 @@
                                 </state>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1CI-UC-3sf">
-                                <rect key="frame" x="591" y="216" width="326" height="64"/>
+                                <rect key="frame" x="514" y="140" width="326" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Welcome to Learning Track!">
@@ -39,7 +39,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WsT-ch-B2Z">
-                                <rect key="frame" x="591" y="414" width="326" height="64"/>
+                                <rect key="frame" x="514" y="338" width="326" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Authentication Successful!">
@@ -53,7 +53,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Hsx-HE-DPD">
-                                <rect key="frame" x="603" y="283" width="99" height="35"/>
+                                <rect key="frame" x="526" y="207" width="99" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Username:">
@@ -67,7 +67,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="h1R-gV-Gsl">
-                                <rect key="frame" x="603" y="328" width="99" height="35"/>
+                                <rect key="frame" x="526" y="252" width="99" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment content="Password:">
@@ -81,31 +81,31 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" id="SUM-XL-GBy">
-                                <rect key="frame" x="915" y="386" width="20" height="20"/>
+                                <rect key="frame" x="838" y="310" width="20" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Default.png" id="g8a-S9-xFU">
-                                <rect key="frame" x="28" y="130" width="590" height="501"/>
+                                <rect key="frame" x="115" y="45" width="340" height="357"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HPl-S3-jbE">
-                                <rect key="frame" x="561" y="363" width="0.0" height="0.0"/>
+                                <rect key="frame" x="484" y="287" width="0.0" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.30702177655412499" green="0.46112946670787008" blue="0.52384086277173914" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="Vf6-SD-7Dx">
-                                <rect key="frame" x="718" y="288" width="179" height="30"/>
+                                <rect key="frame" x="641" y="212" width="179" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="xyR-G0-Vf7">
-                                <rect key="frame" x="718" y="332" width="179" height="30"/>
+                                <rect key="frame" x="641" y="256" width="179" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -128,7 +128,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="931" y="-3007"/>
+            <point key="canvasLocation" x="-1269" y="-765"/>
         </scene>
         <!--Pick Class View Controller - Pick Class Window-->
         <scene sceneID="WBm-XL-pMa">
@@ -171,32 +171,26 @@
             </objects>
             <point key="canvasLocation" x="-19" y="-765"/>
         </scene>
-        <!--Instructor Statistics View Controller - Instructor View Statistics-->
+        <!--Instructor Group Statistics View Controller - Instructor Group Statistics-->
         <scene sceneID="Uds-3T-rJ8">
             <objects>
-                <viewController title="Instructor View Statistics" id="hSQ-bb-aEz" customClass="InstructorStatisticsViewController" sceneMemberID="viewController">
+                <viewController title="Instructor Group Statistics" id="hSQ-bb-aEz" customClass="InstructorGroupStatisticsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xzr-u9-arn">
                         <rect key="frame" x="0.0" y="20" width="1024" height="699"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" id="Wl2-u4-A9S">
-                                <rect key="frame" x="0.0" y="0.0" width="730" height="699"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="699"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </webView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="66y-Zy-44r">
-                                <rect key="frame" x="731" y="0.0" width="293" height="699"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="View Statistics" image="graph_bar_trend.png" id="b8P-1K-rdS"/>
+                    <tabBarItem key="tabBarItem" title="Group Statistics" image="graph_bar_trend.png" id="b8P-1K-rdS"/>
                     <connections>
-                        <outlet property="plotTable" destination="66y-Zy-44r" id="XgL-0D-2ED"/>
-                        <outlet property="webView" destination="Wl2-u4-A9S" id="ehm-6g-S1J"/>
+                        <outlet property="webView" destination="Wl2-u4-A9S" id="vge-33-3RF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MrR-ov-hdW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -451,6 +445,12 @@
         <image name="pencil.png" width="26" height="26"/>
     </resources>
     <classes>
+        <class className="InstructorGroupStatisticsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructorGroupStatisticsViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
         <class className="InstructorOptionsViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructorOptionsViewController.h"/>
             <relationships>
@@ -462,13 +462,6 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructorSeatingChartViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="SeatWebView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-        <class className="InstructorStatisticsViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/InstructorStatisticsViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="plotTable" candidateClass="UITableView"/>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
             </relationships>
         </class>
         <class className="InstructorTabBarController" superclassName="UITabBarController">
